PP-5346: Swagger docs for mandates
Modified some class names to get rid of anything with 'Agreements' in the
generated swagger.

This commit picked up some swagger changes to CreateCardPaymentRequest too; it
seems this should have been done a while ago.
